--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,206 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+:root {
+    --black1 :#141414 ;
+    --black2 :#1d1d1d ;
+    --red : #da2323;
+}
+body{
+    margin: 0px;
+    padding: 0px;
+}
+h1 {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+p {
+  font-size: 12px;
+  color: #222222;
+  font-weight: bold;
+}
+.sidebarUL li {
+    margin: 5px 0px 0px 10px;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: .2s all;
+}
+.navbarUL li {
+    color: #141414;
+    margin: 5px 0px 0px 0px;
+    cursor: pointer;
+    padding: 5px 0px;
+    border-radius: 5px;
+    transition: .2s all;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sidebarIcons {
+  background-color: #949494;
+  color: #D60017;
+  padding: 5px;
+  border-radius: 8px;
+  color: white;
+  font-size: 25px;
+}
+
+.sidebarText {
+  color: #5e5e5e;
+  font-size: 14px;
+  font-weight: 500;
+}
+.navbarText {
+  color: #5e5e5e;
+  font-size: 14px;
+  font-weight: 500;
+}
+/*  0a559c   */
+
+
+
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 15px; /* Specified height */
+    background: white; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.9; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+    border-radius: 5px;
+  }
+  
+  /* Mouse-over effects */
+  .slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+  }
+  
+  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 10px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #2c2c2c; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border-radius: 5px;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 15px; /* Set a specific slider handle width */
+    height: 15px; /* Slider handle height */
+    background: #2c2c2c; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border-radius: 5px;
+  }
+
+  #auuu {
+    border-radius: 20px;
+    color: var(--orange);
+  }
+  /* ------------------------------------------------------------------- */
+  /* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #303030;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #303030;
+}
+.artistCoverTitle {
+  font-size: 30px;
+  color: #1d1d1d;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.serachBar {
+  padding-left: 20px;
+  font-size: 14px;
+  color: #949494;
+  height: 40px;
+  width: 100%;
+}
+.serachBar:focus {
+  outline: none;
+}
+
+
+/* ---------------- Login Page ------------------- */
+.loginTopics {
+  font-size: 20px;
+  color: #0f0f0f;
+  font-weight: 600;
+}
+.loginInput {
+  border:  1px solid #949494;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 14px;
+  color: #696969;
+  margin-top: 3px;
+
+}
+.loginLabel {
+  font-size: 14px;
+  color: #424242;
+  font-weight: 600;
+}
+.loginInput:focus {
+  outline: none;
+}
+.subbmitButton {
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  color: white;
+  margin-top: 3px;
+  cursor: pointer;
+  background-color: #D60017;
+  font-weight: 600;
+}
+.subbmitButton:hover {
+  background-color: #e90017;
+}
+.loginText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #696969;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #696969;
+  margin-top: 3px;
+  border-radius: 10px;
+  width: 30px;
+  height: 30px;
+}
+.forgetPassword {
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #696969;
+  margin-top: 3px;
 }
